Баги исправлены